--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fixy",
-  "version": "1.1.0",
+  "name": "eflex-fixy",
+  "version": "1.2.0",
   "description": "A Fixed Width Input Parser",
   "main": "index.js",
   "directories": {
